--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no">
-    <title>FG-6B20T_updated_main [PsychoPy]</title>
+    <title>Fish Game [PsychoPy]</title>
     <!-- styles -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery-ui-dist@1.12.1/jquery-ui.min.css">
     <link rel="stylesheet" href="./lib/psychojs-2023.1.3.css">
@@ -15,9 +15,9 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery-ui-dist@1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/preloadjs@1.0.1/lib/preloadjs.min.js"></script>
     <!-- experiment -->
-    <script src="./FG-6B20T_updated_main.js" type="module"></script>
+    <script src="./fish-task.js" type="module"></script>
     <!-- legacy browsers -->
     <script src="./lib/psychojs-2023.1.3.iife.js" nomodule></script>
-    <script src="./FG-6B20T_updated_main-legacy-browsers.js" nomodule></script>
+    <script src="./fish-task_legacy-browsers.js" nomodule></script>
   </body>
 </html>
